fixed coming soon text on small viewports

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -235,6 +235,10 @@ a:hover, .card-footer a:hover {
     font-size: 2rem;
   }
 
+  .coming-soon {
+    font-size: 2rem;
+  }
+
   .medium-font {
     font-size: 1.5rem;
   }
